[gd_scene load_steps=4 format=1]

[ext_resource path="res://icecube.gd" type="Script" id=1]
[ext_resource path="res://icecube.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4.01444, 4.00015 )

[node name="icecube" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="raycast_l" type="RayCast2D" parent="."]

transform/pos = Vector2( -4, -3 )
enabled = true
cast_to = Vector2( 0, -15 )
layer_mask = 1
type_mask = 31

[node name="raycast_r" type="RayCast2D" parent="."]

transform/pos = Vector2( 3, -3 )
enabled = true
cast_to = Vector2( 0, -15 )
layer_mask = 1
type_mask = 31

[connection signal="area_enter" from="." to="." method="_on_Area2D_area_enter"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_exit_screen"]


